--- a/src/pages/home/explore-card/styles.module.css
+++ b/src/pages/home/explore-card/styles.module.css
@@ -43,7 +43,7 @@
     box-shadow: rgba(0, 0, 0, 0.133) 0px 1.6px 3.6px 0px,
         rgba(0, 0, 0, 0.11) 0px 0.3px 0.9px 0px;
 
-    background-color: var(--docs-color-background);
+    background-color: var(--docs-color-background-200);
 }
 
 .featureListContainer {
